[tool.poetry]
name = "custom_visualization"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
